# src/api/index.ts
@@ -6,6 +6,7 @@ import { fissionApi } from '@vad-systems/nms-plugin-fission';
 import { relayApi } from '@vad-systems/nms-plugin-relay';
 import { transApi } from '@vad-systems/nms-plugin-trans';
 import { switchApi } from '@vad-systems/nms-plugin-switch';
+import { pluginEnabled } from './middleware.js';
 
 export function setupRoutes(app: express.Application, context: Context) {
     const config = context.configProvider.getConfig();
@@ -13,16 +14,8 @@ export function setupRoutes(app: express.Application, context: Context) {
     app.use('/api/streams', streamsRoute(context));
     app.use('/api/server', serverRoute(context));
 
-    if (config.relay) {
-        app.use('/api/relay', relayApi(context));
-    }
-    if (config.trans) {
-        app.use('/api/trans', transApi(context));
-    }
-    if (config.fission) {
-        app.use('/api/fission', fissionApi(context));
-    }
-    if (config.switch) {
-        app.use('/api/switch', switchApi(context));
-    }
+    app.use('/api/relay', pluginEnabled('relay').bind(context), relayApi(context));
+    app.use('/api/trans', pluginEnabled('trans').bind(context), transApi(context));
+    app.use('/api/fission', pluginEnabled('fission').bind(context), fissionApi(context));
+    app.use('/api/switch', pluginEnabled('switch').bind(context), switchApi(context));
 }
